--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Aug 04 2022 19:08:24 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="62ea5b50156de89de6b50562" data-wf-site="62ea5b50156de8c7d4b50561">
 <head>
   <meta charset="utf-8">
