--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="project-image"><img src="images/Study-Medicine.png" loading="eager" srcset="images/Study-Medicine.png 500w, images/Study-Medicine.png 798w" width="399" sizes="(max-width: 479px) 100vw, (max-width: 767px) 267.3500061035156px, (max-width: 991px) 35vw, 100vw" alt="" class="project-image"></div>
           </div>
         </a>
-        <a href="#" class="project project-2 w-inline-block">
+        <a href="https://valisaros.com/projects/EmiBertea/" class="project project-2 w-inline-block">
           <div class="project-container">
             <div class="project-text-div">
               <h3 class="project-card-h">Emi Bertea — website for a barber with a business</h3>
