--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue May 02 2023 07:02:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="644ceadaa3f2896c24574b5c" data-wf-site="644ceadaa3f289bbdd574b56">
 <head>
   <meta charset="utf-8">
