--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ text-indent: 40%;
       </div>
     </div>
     <div id="work" class="container">
-      <a data-w-id="c4b7ab59-c1d0-2a5b-527c-3f98c282f7ea" href="https://gsg-454bbc.webflow.io/" target="_blank" class="project w-inline-block">
+      <a data-w-id="c4b7ab59-c1d0-2a5b-527c-3f98c282f7ea" href="https://www.gsgnow.com/" target="_blank" class="project w-inline-block">
         <div class="project-description">
           <p class="p-16">Global Scaling Group</p>
           <p class="p-16">Present</p>
