--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 19 2023 11:39:42 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 19 2023 12:01:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6534071d6047abfdf8b13f02" data-wf-site="6534071c6047abfdf8b13eb6">
 <head>
   <meta charset="utf-8">
@@ -99,7 +99,7 @@ a {
               <a href="services.html" class="nav-link w-nav-link">Services</a>
               <a href="about.html" class="nav-link w-nav-link">About</a>
               <a href="#" class="nav-link contact w-nav-link">Contact</a>
-              <a href="#" class="nav-link cta w-nav-link">Contact</a>
+              <a href="schedule-call.html" class="nav-link cta w-nav-link">Contact</a>
             </div>
           </nav>
         </div>
@@ -255,7 +255,7 @@ a {
           <div class="text-wrapper">
             <h5 class="h5">You can book a free consultation call or reach out to me directly via email</h5>
           </div>
-          <a href="#" class="cta-btn w-inline-block">
+          <a href="schedule-call.html" class="cta-btn w-inline-block">
             <h2 class="h2">Schedule a Call</h2>
             <div class="button-round"><img src="images/arrow.svg" loading="lazy" alt="" class="arrow-icon"></div>
           </a>
