--- a/schedule-call.html
+++ b/schedule-call.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 19 2023 11:39:42 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Dec 19 2023 12:01:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="658180417cd2777813f142be" data-wf-site="6534071c6047abfdf8b13eb6">
 <head>
   <meta charset="utf-8">
@@ -90,7 +90,7 @@ a {
               <a href="services.html" class="nav-link w-nav-link">Services</a>
               <a href="about.html" class="nav-link w-nav-link">About</a>
               <a href="#" class="nav-link contact w-nav-link">Contact</a>
-              <a href="#" class="nav-link cta w-nav-link">Contact</a>
+              <a href="schedule-call.html" aria-current="page" class="nav-link cta w-nav-link w--current">Contact</a>
             </div>
           </nav>
         </div>
