--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html><!--  Last Published: Tue Dec 19 2023 12:01:17 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Jan 25 2024 07:21:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6534071d6047abfdf8b13f02" data-wf-site="6534071c6047abfdf8b13eb6">
 <head>
   <meta charset="utf-8">
-  <title>Valeriu Saros - Professional Digital Designer</title>
-  <meta content="Digital designer specialized in web and mobile design, working with world-influencing clients to bridge the gap between business and design." name="description">
-  <meta content="Valeriu Saros - Professional Digital Designer" property="og:title">
-  <meta content="Digital designer specialized in web and mobile design, working with world-influencing clients to bridge the gap between business and design." property="og:description">
+  <title>Valeriu Saros | Digital Designer specialized in Web &amp; Mobile</title>
+  <meta content="Digital designer specialized in web and mobile, working with world-influencing clients to bridge the gap between business and design." name="description">
+  <meta content="Valeriu Saros | Digital Designer specialized in Web &amp; Mobile" property="og:title">
+  <meta content="Digital designer specialized in web and mobile, working with world-influencing clients to bridge the gap between business and design." property="og:description">
   <meta content="https://i.postimg.cc/ncb7fmVY/Graph-Vali-Saros.jpg" property="og:image">
-  <meta content="Valeriu Saros - Professional Digital Designer" property="twitter:title">
-  <meta content="Digital designer specialized in web and mobile design, working with world-influencing clients to bridge the gap between business and design." property="twitter:description">
+  <meta content="Valeriu Saros | Digital Designer specialized in Web &amp; Mobile" property="twitter:title">
+  <meta content="Digital designer specialized in web and mobile, working with world-influencing clients to bridge the gap between business and design." property="twitter:description">
   <meta content="https://i.postimg.cc/ncb7fmVY/Graph-Vali-Saros.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -110,7 +110,7 @@ a {
   <section class="section home">
     <div class="w-layout-blockcontainer container w-container">
       <div class="heading-wrapper">
-        <h1 class="h1">Digital designer specialized in web and mobile design, previously worked with <a href="http://www.koto.studio" target="_blank" class="link koto">Koto</a> and world-influencing clients.</h1>
+        <h1 class="h1">Digital designer specializing in web and mobile, partner of internationally recognized firms such as Koto &amp; GSG.</h1>
       </div>
     </div>
   </section>
@@ -118,7 +118,7 @@ a {
     <div class="container">
       <div class="projects-wrapper">
         <a id="w-node-_18a64b4d-77ac-849e-8879-5fb98bc96d68-f8b13f02" href="work/baika.html" class="project w-inline-block">
-          <div class="project-img-wrapper"><img src="images/Baika-Thumbnail-1.jpg" loading="lazy" srcset="images/Baika-Thumbnail-1-p-500.jpg 500w, images/Baika-Thumbnail-1-p-800.jpg 800w, images/Baika-Thumbnail-1-p-1080.jpg 1080w, images/Baika-Thumbnail-1-p-1600.jpg 1600w, images/Baika-Thumbnail-1.jpg 1920w" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 47vw, 48vw" class="project-img"></div>
+          <div class="project-img-wrapper"><img src="images/Baika-Thumbnail-White-min.jpg" loading="lazy" srcset="images/Baika-Thumbnail-White-min-p-500.jpg 500w, images/Baika-Thumbnail-White-min-p-800.jpg 800w, images/Baika-Thumbnail-White-min-p-1080.jpg 1080w, images/Baika-Thumbnail-White-min-p-1600.jpg 1600w, images/Baika-Thumbnail-White-min.jpg 1920w" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 47vw, 48vw" class="project-img"></div>
           <div class="project-info-wrapper">
             <div class="project-name-wrapper">
               <h5 class="h5">Baika: Repairs Anytime, Anywhere</h5>
@@ -154,7 +154,7 @@ a {
           </div>
         </a>
         <a id="w-node-b0a9ed6d-5118-8af2-13d8-98312a392611-f8b13f02" href="work/founderful.html" class="project w-inline-block">
-          <div class="project-img-wrapper"><img src="images/Founderful-Thumbnail-min.jpg" loading="lazy" width="690" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 47vw, 48vw" alt="" srcset="images/Founderful-Thumbnail-min-p-500.jpg 500w, images/Founderful-Thumbnail-min-p-800.jpg 800w, images/Founderful-Thumbnail-min-p-1080.jpg 1080w, images/Founderful-Thumbnail-min.jpg 1920w" class="project-img"></div>
+          <div class="project-img-wrapper"><img src="images/Founderful-Thumbnail-White.jpg" loading="lazy" width="690" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 47vw, 48vw" alt="" srcset="images/Founderful-Thumbnail-White-p-500.jpg 500w, images/Founderful-Thumbnail-White-p-800.jpg 800w, images/Founderful-Thumbnail-White-p-1080.jpg 1080w, images/Founderful-Thumbnail-White-p-1600.jpg 1600w, images/Founderful-Thumbnail-White.jpg 1920w" class="project-img"></div>
           <div class="project-info-wrapper">
             <div class="project-name-wrapper">
               <h5 class="h5">Founderful: First. Fast. And founder-friendly</h5>
@@ -189,15 +189,15 @@ a {
             </div>
           </div>
         </a>
-        <a id="w-node-_00365459-e5f7-5d4d-9c58-2ea2275bb303-f8b13f02" href="work/freeflow.html" class="project w-inline-block">
-          <div class="project-img-wrapper"><img src="images/Screenshot-from-2023-12-15-13-24-03-1.jpg" loading="lazy" srcset="images/Screenshot-from-2023-12-15-13-24-03-1-p-500.jpg 500w, images/Screenshot-from-2023-12-15-13-24-03-1-p-800.jpg 800w, images/Screenshot-from-2023-12-15-13-24-03-1-p-1080.jpg 1080w, images/Screenshot-from-2023-12-15-13-24-03-1-p-1600.jpg 1600w, images/Screenshot-from-2023-12-15-13-24-03-1.jpg 1920w" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 47vw, 48vw" class="project-img"></div>
+        <a id="w-node-_00365459-e5f7-5d4d-9c58-2ea2275bb303-f8b13f02" href="work/formandframe.html" class="project w-inline-block">
+          <div class="project-img-wrapper"><img src="images/FormFrame-1-min.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 94vw, (max-width: 991px) 47vw, 48vw" alt="" width="960" srcset="images/FormFrame-1-min-p-500.jpg 500w, images/FormFrame-1-min-p-800.jpg 800w, images/FormFrame-1-min-p-1080.jpg 1080w, images/FormFrame-1-min-p-1600.jpg 1600w, images/FormFrame-1-min.jpg 1920w" class="project-img"></div>
           <div class="project-info-wrapper">
             <div class="project-name-wrapper">
-              <h5 class="h5">Freeflow</h5>
+              <h5 class="h5">Form &amp; Frame</h5>
               <div class="icon-wrapper"><img src="images/arrow.svg" loading="lazy" alt="" class="arrow-icon"></div>
             </div>
             <div class="project-description-wrapper">
-              <p class="p">Leading video production studio, sought an impactful online platform to showcase their outstanding work. </p>
+              <p class="p">Video production studio helping leaders in architecture, design, and real estate better market themselves in an increasingly video-driven world.</p>
             </div>
           </div>
         </a>
@@ -225,13 +225,13 @@ a {
   <section class="section home-approach">
     <div class="container">
       <div class="h2-wrapper">
-        <h2 class="h2 dark">Bridging the gap between business and design. Collaborating with clients to create memorable digital experiences.</h2>
+        <h2 class="h2 dark">Bridging the gap between business and design by collaborating with clients to create memorable digital experiences.</h2>
       </div>
       <div class="info-testi-wrapper">
         <div class="testimonial-wrapper">
           <div class="left-quote"><img src="images/quote-left.svg" loading="lazy" alt="" class="quote"></div>
           <div class="testimonial-content">
-            <h5 class="h5">Valeriu&#x27;s expertise was crucial in shaping a tailored digital experience for GSG, embodying our global reach and commitment to seamless international business scaling.</h5>
+            <h5 class="h5">Vali&#x27;s expertise was crucial in shaping a tailored digital experience for GSG, embodying our global reach and commitment to international partnerships.</h5>
             <div class="testimonial-person"><img src="images/william.png" loading="lazy" width="40" alt="" class="person">
               <div class="person-detail">
                 <h5 class="h5">William Montague</h5>
@@ -242,8 +242,8 @@ a {
           <div class="right-quote"><img src="images/quote-right.svg" loading="lazy" alt="" class="quote"></div>
         </div>
         <div class="text-wrapper left">
-          <p class="p dark">Valeriu&#x27;s profound knowledge in design enables him to seamlessly blend creativity with functionality, resulting in experiences that leave a lasting impression and exude personality.</p>
-          <p class="p dark">With the successful completion of over 37 projects, without a single instance of disappointment, his expertise spans from web and mobile design to branding and identity design, seamlessly extending into front-end web development.</p>
+          <p class="p dark">Valeriu&#x27;s knowledge in design enables him to blend creativity with functionality, resulting in experiences that leave a lasting impression and exude personality.</p>
+          <p class="p dark">With the successful completion of over 37 projects, his expertise spans from web and mobile design to brand and identity, along with front-end web development</p>
         </div>
       </div>
     </div>
@@ -307,6 +307,31 @@ a {
 $('a').mouseleave(function() {
   $('.cursor').click();
 });
+</script>
+  <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@0.2.28/bundled/lenis.js"></script>
+  <script>
+// Lenis scroll
+// Scrolling library
+const lenis = new Lenis({
+  duration: 1.75,
+  easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)), // https://www.desmos.com/calculator/brs54l4xou
+  direction: 'vertical', // vertical, horizontal
+  gestureDirection: 'vertical', // vertical, horizontal, both
+  smooth: true,
+  mouseMultiplier: 1,
+  smoothTouch: false,
+  touchMultiplier: 2,
+  infinite: false,
+})
+//get scroll value
+lenis.on('scroll', ({ scroll, limit, velocity, direction, progress }) => {
+  console.log({ scroll, limit, velocity, direction, progress })
+})
+function raf(time) {
+  lenis.raf(time)
+  requestAnimationFrame(raf)
+}
+requestAnimationFrame(raf)
 </script>
 </body>
 </html>
