--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Jan 25 2024 07:21:36 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Jan 25 2024 10:57:43 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6534071d6047abfdf8b13f02" data-wf-site="6534071c6047abfdf8b13eb6">
 <head>
   <meta charset="utf-8">
@@ -232,7 +232,7 @@ a {
           <div class="left-quote"><img src="images/quote-left.svg" loading="lazy" alt="" class="quote"></div>
           <div class="testimonial-content">
             <h5 class="h5">Vali&#x27;s expertise was crucial in shaping a tailored digital experience for GSG, embodying our global reach and commitment to international partnerships.</h5>
-            <div class="testimonial-person"><img src="images/william.png" loading="lazy" width="40" alt="" class="person">
+            <div class="testimonial-person"><img src="images/William-Montague-1.png" loading="lazy" width="40" alt="" class="person">
               <div class="person-detail">
                 <h5 class="h5">William Montague</h5>
                 <p class="p">CEO Global Scaling Group</p>
