--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html><!--  Last Published: Sat Jul 13 2024 08:55:40 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jul 13 2024 09:49:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66693315aa98ddf5cbb27af1" data-wf-site="66693315aa98ddf5cbb27a96">
 <head>
   <meta charset="utf-8">
-  <title>SAROS STUDIO | Design Studio Specialized in Web</title>
-  <meta content="Websites that tell stories for brands that want to differentiate. Helping brands gain a competitive advantage through a strategy-led approach." name="description">
-  <meta content="SAROS STUDIO | Design Studio Specialized in Web" property="og:title">
-  <meta content="Websites that tell stories for brands that want to differentiate. Helping brands gain a competitive advantage through a strategy-led approach." property="og:description">
+  <title>Valeriu Saros | Designer</title>
+  <meta content="Designer and front-end developer specialising in web, previously worked with Koto Studio &amp; RiseWithUs." name="description">
+  <meta content="Valeriu Saros | Designer" property="og:title">
+  <meta content="Designer and front-end developer specialising in web, previously worked with Koto Studio &amp; RiseWithUs." property="og:description">
   <meta content="https://i.postimg.cc/8CFgh8hC/temp-Image-XCrj-KH.avif" property="og:image">
-  <meta content="SAROS STUDIO | Design Studio Specialized in Web" property="twitter:title">
-  <meta content="Websites that tell stories for brands that want to differentiate. Helping brands gain a competitive advantage through a strategy-led approach." property="twitter:description">
+  <meta content="Valeriu Saros | Designer" property="twitter:title">
+  <meta content="Designer and front-end developer specialising in web, previously worked with Koto Studio &amp; RiseWithUs." property="twitter:description">
   <meta content="https://i.postimg.cc/8CFgh8hC/temp-Image-XCrj-KH.avif" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
